# Yapper

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  LICENSE  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
apps/desktop/: index.html  package.json  vite.config.ts  widget.html
apps/desktop/scripts/: fetch-models.sh
apps/desktop/src/: widget.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: .gitignore
apps/desktop/src-tauri/resources/models/: .gitignore
apps/desktop/src-tauri/src/: ai_provider.rs  autopaste.rs  bridge.rs  commands.rs  conversation.rs  dictionary.rs  history.rs  hotkey.rs  lib.rs  main.rs  metrics.rs  model_manager.rs  sidecar.rs  snippets.rs  store.rs
apps/desktop/src-tauri/src/providers/: ai_bridge.rs  ai_direct.rs  mod.rs  stt_native.rs  stt_whisper.rs  vision_anthropic.rs  vision_bridge.rs  vision_native.rs
apps/desktop/src-tauri/src/screen_capture/: macos.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/stt/: macos.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/widget/: macos.rs  mod.rs  windows.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/app/components/: ConversationView.tsx  DictionaryView.tsx  FloatingWidget.tsx  HelpView.tsx  HistoryCard.tsx  ItemManagerView.tsx  LandingPage.tsx  MainWindow.tsx  MetricsBadges.tsx  SettingsDialog.tsx  SettingsView.tsx  SnippetsView.tsx
apps/desktop/src/app/hooks/: useHistory.ts  useSettings.ts  useTauriEvents.ts
apps/desktop/src/app/lib/: tauri-bridge.ts  tokens.ts  types.ts
apps/desktop/src/styles/: fonts.css  index.css  theme.css
docs/superpowers/plans/: 2026-03-18-prompt-refinement-services.md  2026-03-29-voice-commands.md  2026-03-30-dynamic-model-selection.md  2026-03-31-yapper-v2-whisper-vision.md
docs/superpowers/specs/: 2026-03-29-voice-commands-design.md  2026-03-30-dynamic-model-selection-design.md  2026-03-31-yapper-v2-cloud-stt-vision-design.md
extensions/vscode-bridge/: .vscodeignore  esbuild.config.mjs  package-lock.json  package.json
extensions/vscode-bridge/src/: copilot-bridge.ts  extension.ts  protocol.ts
