[package]
name = "yapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "yapper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = { version = "0.2", features = ["serde"] }
tungstenite = "0.24"
url = "2"
log = "0.4"
chrono = "0.4"
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
cocoa = "0.26"
objc = "0.2"
block = "0.1"
objc2-foundation = { version = "0.3", features = ["NSString", "NSLocale", "NSError", "NSArray"] }
objc2-speech = { version = "0.3", features = ["SFSpeechRecognizer", "SFSpeechRecognitionRequest", "SFSpeechRecognitionResult", "SFTranscription", "SFSpeechRecognitionTask"] }
objc2-avf-audio = { version = "0.3", features = ["AVAudioEngine", "AVAudioNode", "AVAudioIONode", "AVAudioFormat", "AVAudioTypes", "AVAudioBuffer"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Media_SpeechRecognition", "Foundation", "Foundation_Collections"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
