[package]
name = "yapper"
version = "0.0.10"
edition = "2021"

[lib]
name = "yapper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
url = "2"
log = "0.4"
chrono = "0.4"
once_cell = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSLocale", "NSError", "NSArray"] }
objc2-app-kit = { version = "0.3", features = [
    "NSPanel", "NSWindow", "NSScreen", "NSEvent", "NSColor",
    "NSView", "NSResponder", "NSApplication", "NSGraphics",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Media_SpeechRecognition",
    "Foundation",
    "Foundation_Collections",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
